# claude-harness

./: .gitattributes  .gitignore  README.md  add-full-powershell-scripts.md  dump_np.json  found-in-orchestration.md  found-in-tests-system.md  leaderboard.json  rewrite-in-python.md  to-clean.md  w11a.json
.claude/: settings.json
TMPCHR/: A.md  chronicle.md
TMP_eval/: c_B.md  c_C.md
docs/: whisperdeep.md
experiments/tts/: main.py  pyproject.toml
harness/: orchestrate.ps1  orchestrate.py
harness-state/: config.json  cost-log.json  handoff.json  pr-body.md  product-spec.md  progress.md  sprint-plan.json
harness-state/regression/: registry.json
harness/hooks/: on-evaluator-stop.py  on-generator-stop.py  on-stop.py
harness/lib/: contract.ps1  contract.py  evaluator.ps1  evaluator.py  generator.ps1  generator.py  git.ps1  git.py  invoke.ps1  invoke.py  planner.ps1  planner.py  utils.ps1  utils.py
tests/: __init__.py  run-all.ps1  run-all.py  test_fix001.py  test_game.py  test_generator.py  test_sprint01.py  test_sprint07.py  test_sprint08.py  test_sprint10.py  test_sprint11.py  test_sprint12.py
tests/helpers/: claude.cmd  mock_claude.py  test_helper.py
tests/layer1/: test_contract.py  test_evaluator.py  test_generator.py  test_git.py  test_hooks.py  test_invoke.py  (+3 more)
whisperdeep/: __init__.py  __main__.py  adapter_factory.py  archetypes.py  audio.py  chronicle.py  cli.py  entity.py  events.py  floor.py  game.py  generator.py  keybinds.py  leaderboard.py  llm.py  panel.py  prose_pool.json  render.py  summary.py  tiles.py  whisperer.py  world.py
(+63 files in other folders)
