[project]
name = "whisperdeep-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kokoro>=0.9.4",
    "numpy>=2.4.6",
    "soundfile>=0.14.0",
    "torch>=2.12.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
